--- a/.classpath
+++ b/.classpath
@@ -23,7 +23,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="src/main/resources/CurveSmooth.java"/>
+	<classpathentry kind="lib" path="/home/affective/Downloads/commons-math3-3.0/commons-math3-3.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -34,7 +34,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/affective/Downloads/commons-math3-3.0"/>
-	<classpathentry kind="lib" path="/home/affective/Downloads/commons-math3-3.0/commons-math3-3.0.jar"/>
+	<classpathentry kind="lib" path="/home/affective/Downloads/flanagan.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
