--- a/pom.xml
+++ b/pom.xml
@@ -29,13 +29,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>storm</groupId>
-			<artifactId>storm</artifactId>
-			<version>0.8.1</version>
-			<!-- keep storm out of the jar-with-dependencies -->
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
 			<groupId>flanagan</groupId>
 			<artifactId>flanagan</artifactId>
 			<version>1.0</version>
@@ -46,19 +39,10 @@
 			<version>3.0</version>
 		</dependency>
 		<dependency>
-			<groupId>LiveGraph</groupId>
-			<artifactId>LiveGraph</artifactId>
-			<version>2.0.1</version>
+			 <groupId>storm</groupId>
+			 <artifactId>storm</artifactId>
+			 <version>0.9.0-wip4</version>
 		</dependency>
-		<dependency>
-			<groupId>jfree</groupId>
-			<artifactId>jfreechart</artifactId>
-			<version>1.0.13</version>
-		</dependency>
-		<dependency>
-			<groupId>jmathplot</groupId>
-			<artifactId>jmathplot</artifactId>
-			<version>1.0</version>
-		</dependency>
+	
 </dependencies>
 </project>
