--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
 			 <artifactId>storm</artifactId>
 			 <version>0.9.0-wip4</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 	
 </dependencies>
 </project>
