--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>storm.affective</groupId>
   <artifactId>storm-simple</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0</version>
   <name>StormSimpleApp</name>
   
   <repositories>
@@ -33,11 +33,13 @@
 			<artifactId>flanagan</artifactId>
 			<version>1.0</version>
 		</dependency>
+		
 		<dependency>
-			<groupId>commons-math3</groupId>
-			<artifactId>commons-math3</artifactId>
-			<version>3.0</version>
-		</dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.6</version>
+		</dependency>           
+		
 		<dependency>
 			 <groupId>storm</groupId>
 			 <artifactId>storm</artifactId>
@@ -48,12 +50,6 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
-		</dependency>
-		<dependency>
-			<groupId>jfree</groupId>
-			<artifactId>jfreechart</artifactId>
-			<version>1.0.13</version>
-		</dependency>
-	
+		</dependency>	
 </dependencies>
 </project>
