--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
 		</dependency>
 		
 		<dependency>
+		  <groupId>storm</groupId>
+		  <artifactId>storm-kestrel</artifactId>
+		  <version>0.7.2-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
